Refactor CORS configuration and remove security filter